<resources>
    <string name="app_name">SafeIndia</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user_form1">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">First Name</string>
    <string name="prompt_password">Last Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_sign_in_short">First Name</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="FirstLogin">FirstLogin</string>
    <string name="title_activity_map_drawer">MapDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
